--- a/library-quiz/index.html
+++ b/library-quiz/index.html
@@ -61,7 +61,7 @@ Questions are randomized and at the end you'll get a short summery of your resul
 </div>
 
 <footer id="footer">
-	<p>Just another excercise in JavaScript.</p>
+	<p>高雄市立圖書館 燕巢分館</p>
 </footer>
   
   
