--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -19,7 +19,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jquery.touchSwipe.min.js" defer></script>
 	<script src="./js/lazysizes.min.js" defer></script>
-    <title>Home</title>
+    <title>高雄市立圖書館燕巢分館</title>
 
     
 <!-- Google Analytics -->
@@ -44,7 +44,7 @@
 			<div class="collapse navbar-collapse navbar-1">
 				<ul class="site-navigation nav navbar-nav animated fadeIn animDelay04">
 					<li>
-						<a href="index.html" class="ltc-outer-space">Home</a>
+						<a href="index.html" class="ltc-outer-space">首頁</a>
 					</li>
 					<li>
 						<a href="intro.html" class="ltc-outer-space">圖書館介紹</a>
