--- a/library-quiz/index.html
+++ b/library-quiz/index.html
@@ -9,7 +9,8 @@
 <link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans:700,800" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-  
+	<link rel="icon" href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/favicon.ico" type="image/ico"
+	/>
       <link rel="stylesheet" href="css/style.css">
 
   
