--- a/pannallum-360/index.html
+++ b/pannallum-360/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <title>Pannallum 360</title>
   
-<link rel="stylesheet" href="https://cdn.pannellum.org/2.3/pannellum.css" />
+  <link rel="stylesheet" href="https://cdn.pannellum.org/2.3/pannellum.css" />
 
+  <link rel="icon" href="https://andy6804tw.github.io/yenchao-library-web-2018/pannallum-360/favicon.ico" type="image/ico" />
 
-      <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   
 </head>
