--- a/website/intro.html
+++ b/website/intro.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="https://andy6804tw.github.io/yenchao-library-web-2018/website/favicon.ico">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
