--- a/website/index.html
+++ b/website/index.html
@@ -126,7 +126,7 @@
 					<br>擴增實境（Augmented Reality，簡稱AR) 接近現實的虛擬環境。裝置利用電腦技術模擬出一個立體、高擬真的 3D 空間，讓使用者身歷其境，產生如同在現實中一般的體驗。<br><br>
 				</p>
 				<div class="text-center">
-					<a href="index.html" class="btn btn-d btn-xl animated bounceIn animDelay06 none animSpeedLazy">Android下載</a>
+					<a href="https://drive.google.com/file/d/1gATdTxrZP6P_J5bAQ2uBejY25vL0qdcW/view" class="btn btn-d btn-xl animated bounceIn animDelay06 none animSpeedLazy">Android下載</a>
 				</div>
 			</div>
 			<div class="col-sm-8">
