--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/animate.min.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="./css/feather.min.css">
 	
