--- a/website/index.html
+++ b/website/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" type="image/x-icon" href="https://andy6804tw.github.io/yenchao-library-web-2018/website/favicon.ico">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<!-- <link rel="stylesheet" type="text/css" href="./css/animate.min.css"> -->
-	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css"> -->
-	<link rel="stylesheet" type="text/css" href="./css/feather.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/feather.min.css"> -->
 	
     
 	<script src="./js/jquery-2.1.0.min.js"></script>
