--- a/website/index.html
+++ b/website/index.html
@@ -9,9 +9,9 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<!--<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/feather.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="./css/feather.min.css">
 	
     
 	<script src="./js/jquery-2.1.0.min.js"></script>
