--- a/web/index.html
+++ b/web/index.html
@@ -1,40 +1,58 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <title>vanilla menu</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
 
-  
+
+
+  <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 
 <body>
 
+  <!-- 導航列 -->
   <nav class="navbar">
-  <div class="navbar-header"><a href="index.html"><img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-title.png" alt="logo" width="100" height="70" /></a></div>
-  <button id="menuToggle">menu</button>
-  <div class="navbar-bottom">
-    <ul id="menu">
-      <li><a href="">首頁</a></li>
-      <li><a href="">圖書館介紹</a></li>
-      <li><a href="">互動問答</a></li>
-      <li><a href="">導覽手冊</a></li>
-    </ul>
-  </div>
-</nav>
+    <div class="navbar-header">
+      <a href="index.html">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-title.png" alt="logo" width="100"
+          height="70" />
+      </a>
+    </div>
+    <button id="menuToggle">
+      <div></div>
+      <div></div>
+      <div></div>
+    </button>
+    <div class="navbar-bottom">
+      <ul id="menu">
+        <li>
+          <a href="">首頁</a>
+        </li>
+        <li>
+          <a href="">圖書館介紹</a>
+        </li>
+        <li>
+          <a href="">互動問答</a>
+        </li>
+        <li>
+          <a href="">導覽手冊</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-<section id="screen1">
-  <div id="screen2"></div>
-  <div id="screen3"></div>
-</section>
-  
-  
+  <section id="screen1">
+    <div id="screen2"></div>
+    <div id="screen3"></div>
+  </section>
 
-    <script  src="js/index.js"></script>
+
+
+  <script src="js/index.js"></script>
 
 
 
