--- a/web/index.html
+++ b/web/index.html
@@ -46,6 +46,34 @@
   </nav>
 
   <section id="screen1">
+    <div class="slideshow-container">
+      <div class="mySlides fade">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner01.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner02.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner03.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner04.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner05.jpg" style="width:100%">
+      </div>
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      <div class="dot-block">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        </span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        </span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+      </div>
+    </div>
     <div id="screen2"></div>
     <div id="screen3"></div>
   </section>
