--- a/web/index.html
+++ b/web/index.html
@@ -74,6 +74,21 @@
         <span class="dot" onclick="currentSlide(5)"></span>
       </div>
     </div>
+    <!-- Block 1 (AR互動) -->
+    <div class="block-1">
+      <div class="left">
+        <h1>圖書館AR互動</h1>
+        <p>
+          擴增實境（Augmented Reality，簡稱AR) 接近現實的虛擬環境。裝置利用電腦技術模擬出一個立體、高擬真的 3D 空間，讓使用者身歷其境，產生如同在現實中一般的體驗。
+        </p>
+        <div class="button">
+          <a href="https://drive.google.com/file/d/1gATdTxrZP6P_J5bAQ2uBejY25vL0qdcW/view">Android下載</a>
+        </div>
+      </div>
+      <div class="right">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-app.png" alt="">
+      </div>
+    </div>
     <div id="screen2"></div>
     <div id="screen3"></div>
   </section>
