--- a/web/index.html
+++ b/web/index.html
@@ -89,6 +89,23 @@
         <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-app.png" alt="">
       </div>
     </div>
+    <!-- Block 2 (360導覽) -->
+    <div class="block-2">
+      <div class="left">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-360.gif" alt="">
+      </div>
+      <div class="right">
+        <h1> 圖書館 360° 導覽</h1>
+        <p>
+           館內一到三樓 360° 度全景導覽無死角，在家就能夠一覽燕巢圖書館的館內設施。我們使用全景攝影機拍攝圖書館館內這個區域目的讓來使用的民眾能夠快速的一覽館內的所有設施。
+        </p>
+        <div class="button">
+          <a href="https://andy6804tw.github.io/yenchao-library-web-2018/pannallum-360/index.html">網頁版</a>
+          <a href="https://drive.google.com/file/d/1k9Qr85tLD6024bJfXgVO-7-G8Q0BJOE_/view">Android</a>
+          <a href="https://www.youtube.com/watch?v=Q8F2mi9KqcI">YouTube</a>
+        </div>
+      </div>
+    </div>
     <div id="screen2"></div>
     <div id="screen3"></div>
   </section>
