--- a/web/index.html
+++ b/web/index.html
@@ -95,7 +95,7 @@
         <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-360.gif" alt="">
       </div>
       <div class="right">
-        <h1> 圖書館 360° 導覽</h1>
+        <h1>圖書館 360° 導覽</h1>
         <p>
            館內一到三樓 360° 度全景導覽無死角，在家就能夠一覽燕巢圖書館的館內設施。我們使用全景攝影機拍攝圖書館館內這個區域目的讓來使用的民眾能夠快速的一覽館內的所有設施。
         </p>
@@ -104,6 +104,21 @@
           <a href="https://drive.google.com/file/d/1k9Qr85tLD6024bJfXgVO-7-G8Q0BJOE_/view">Android</a>
           <a href="https://www.youtube.com/watch?v=Q8F2mi9KqcI">YouTube</a>
         </div>
+      </div>
+    </div>
+    <!-- Block 3 (簡介) -->
+    <div class="block-3">
+      <div class="left">
+        <h1>圖書館簡介</h1>
+        <p>
+           燕巢圖書館獲教育部補助閱讀環境改善經費，進行內部空間改善工程，於106年7月15日重新開館，全館配合特色館藏”自然生態”，以綠意為設計主題。舒適的閱讀氛圍和多元的推廣活動吸引更多的讀者進館，目前藏書六萬七千餘冊。加上本分館執行教育部燕巢數位機會中心計畫，開辦多元數位資訊課程，以彌平城鄉數位化程度，是燕巢地區多元的學習中心。
+        </p>
+        <div class="button">
+          <a href="https://drive.google.com/file/d/1gATdTxrZP6P_J5bAQ2uBejY25vL0qdcW/view">Android下載</a>
+        </div>
+      </div>
+      <div class="right">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-img01.jpg" alt="">
       </div>
     </div>
     <div id="screen2"></div>
