modify image block-04

--- a/web/index.html
+++ b/web/index.html
@@ -114,12 +114,15 @@
            燕巢圖書館獲教育部補助閱讀環境改善經費，進行內部空間改善工程，於106年7月15日重新開館，全館配合特色館藏”自然生態”，以綠意為設計主題。舒適的閱讀氛圍和多元的推廣活動吸引更多的讀者進館，目前藏書六萬七千餘冊。加上本分館執行教育部燕巢數位機會中心計畫，開辦多元數位資訊課程，以彌平城鄉數位化程度，是燕巢地區多元的學習中心。
         </p>
         <div class="button">
-          <a href="https://drive.google.com/file/d/1gATdTxrZP6P_J5bAQ2uBejY25vL0qdcW/view">Android下載</a>
+          <a href="https://drive.google.com/file/d/1gATdTxrZP6P_J5bAQ2uBejY25vL0qdcW/view">詳細介紹</a>
         </div>
       </div>
       <div class="right">
         <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-img01.jpg" alt="">
       </div>
+    </div>
+    <div class="block-4">
+      
     </div>
     <div id="screen2"></div>
     <div id="screen3"></div>
