add feature icon

--- a/web/index.html
+++ b/web/index.html
@@ -97,7 +97,7 @@
       <div class="right">
         <h1>圖書館 360° 導覽</h1>
         <p>
-           館內一到三樓 360° 度全景導覽無死角，在家就能夠一覽燕巢圖書館的館內設施。我們使用全景攝影機拍攝圖書館館內這個區域目的讓來使用的民眾能夠快速的一覽館內的所有設施。
+          館內一到三樓 360° 度全景導覽無死角，在家就能夠一覽燕巢圖書館的館內設施。我們使用全景攝影機拍攝圖書館館內這個區域目的讓來使用的民眾能夠快速的一覽館內的所有設施。
         </p>
         <div class="button">
           <a href="https://andy6804tw.github.io/yenchao-library-web-2018/pannallum-360/index.html">網頁版</a>
@@ -111,7 +111,7 @@
       <div class="left">
         <h1>圖書館簡介</h1>
         <p>
-           燕巢圖書館獲教育部補助閱讀環境改善經費，進行內部空間改善工程，於106年7月15日重新開館，全館配合特色館藏”自然生態”，以綠意為設計主題。舒適的閱讀氛圍和多元的推廣活動吸引更多的讀者進館，目前藏書六萬七千餘冊。加上本分館執行教育部燕巢數位機會中心計畫，開辦多元數位資訊課程，以彌平城鄉數位化程度，是燕巢地區多元的學習中心。
+          燕巢圖書館獲教育部補助閱讀環境改善經費，進行內部空間改善工程，於106年7月15日重新開館，全館配合特色館藏”自然生態”，以綠意為設計主題。舒適的閱讀氛圍和多元的推廣活動吸引更多的讀者進館，目前藏書六萬七千餘冊。加上本分館執行教育部燕巢數位機會中心計畫，開辦多元數位資訊課程，以彌平城鄉數位化程度，是燕巢地區多元的學習中心。
         </p>
         <div class="button">
           <a href="https://drive.google.com/file/d/1gATdTxrZP6P_J5bAQ2uBejY25vL0qdcW/view">詳細介紹</a>
@@ -122,7 +122,43 @@
       </div>
     </div>
     <div class="block-4">
-      
+      <div class="title">
+        <h1>圖書館設施</h1>
+      </div>
+      <div class="feature-left">
+        <div class="item-text">
+          <h3 class="text-right">資訊檢索</h3>
+          <p>本館共有六台公用電腦提供讀者使用查詢瀏覽資料，登記或預約使用本館電腦，要攜帶本人借閱證或有效身分證明文件於一樓櫃台進行登記。</p>
+        </div>
+        <div class="item-icon">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus,
+        </div>
+      </div>
+      <div class="feature-right">
+        <div class="item-icon">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus,
+        </div>
+        <div class="item-text">
+          <h3>資訊檢索</h3>
+          <p>本館共有六台公用電腦提供讀者使用查詢瀏覽資料，登記或預約使用本館電腦，要攜帶本人借閱證或有效身分證明文件於一樓櫃台進行登記。</p>
+        </div>
+      </div>
+      <div class="feature-left">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus, excepturi aperiam
+        rem voluptas commodi?
+      </div>
+      <div class="feature-right">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus, excepturi aperiam
+        rem voluptas commodi?
+      </div>
+      <div class="feature-left">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus, excepturi aperiam
+        rem voluptas commodi?
+      </div>
+      <div class="feature-right">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus, excepturi aperiam
+        rem voluptas commodi?
+      </div>
     </div>
     <div id="screen2"></div>
     <div id="screen3"></div>
