完成圖書館設施

--- a/web/index.html
+++ b/web/index.html
@@ -122,94 +122,63 @@
       </div>
     </div>
     <div class="block-4">
-      <div class="title">
-        <h1>圖書館設施</h1>
-      </div>
+      <h1>圖書館設施</h1>
+      <!-- 1 line -->
       <div class="feature-left">
         <div class="item-text">
           <h3 class="text-right">資訊檢索</h3>
           <p>本館共有六台公用電腦提供讀者使用查詢瀏覽資料，登記或預約使用本館電腦，要攜帶本人借閱證或有效身分證明文件於一樓櫃台進行登記。</p>
         </div>
         <div class="item-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="96" height="96" viewBox="0 0 252 252" style="fill:#ffffff;">
-            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"
-              stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
-              <path d="M0,252v-252h252v252z" fill="none"></path>
-              <path d="M126,252c-69.58788,0 -126,-56.41212 -126,-126v0c0,-69.58788 56.41212,-126 126,-126v0c69.58788,0 126,56.41212 126,126v0c0,69.58788 -56.41212,126 -126,126z"
-                fill="#fdc98f"></path>
-              <g id="Layer_1">
-                <g>
-                  <path d="M42.83508,220.5c-3.02904,0 -5.87412,-1.17936 -8.01612,-3.31884c-4.41756,-4.41756 -4.41756,-11.60964 0,-16.0272l92.80656,-88.4772l11.73312,11.74572l-88.53012,92.77884c-2.11932,2.11932 -4.96692,3.29868 -7.99344,3.29868z"
-                    fill="#b6c9d6"></path>
-                  <path d="M127.60284,114.43572l9.99432,10.0044l-87.63804,91.84896c-1.90512,1.9026 -4.43268,2.95092 -7.12404,2.95092c-2.69136,0 -5.22144,-1.04832 -7.12404,-2.95092c-3.92868,-3.92868 -3.92868,-10.3194 -0.04284,-14.20524l91.93464,-87.64812M127.6482,110.91276l-93.7188,89.34912c-4.91904,4.91904 -4.91652,12.89232 0,17.81136c2.45952,2.457 5.6826,3.68676 8.90568,3.68676c3.22308,0 6.44616,-1.22976 8.90568,-3.68928l89.37936,-93.6684l-13.47192,-13.48956z"
-                    fill="#788b9c"></path>
-                </g>
-                <g>
-                  <path d="M156.24012,160.02c-35.43372,0 -64.26,-28.82628 -64.26,-64.26c0,-35.43372 28.82628,-64.26 64.26,-64.26c35.43372,0 64.26,28.82628 64.26,64.26c0,35.43372 -28.82628,64.26 -64.26,64.26z"
-                    fill="#d1edff"></path>
-                  <path d="M156.24012,32.76c34.7382,0 63,28.2618 63,63c0,34.7382 -28.2618,63 -63,63c-34.7382,0 -63,-28.2618 -63,-63c0,-34.7382 28.2618,-63 63,-63M156.24012,30.24c-36.18468,0 -65.52,29.33532 -65.52,65.52c0,36.18468 29.33532,65.52 65.52,65.52c36.18468,0 65.52,-29.33532 65.52,-65.52c0,-36.18468 -29.33532,-65.52 -65.52,-65.52z"
-                    fill="#788b9c"></path>
-                </g>
-              </g>
-            </g>
-          </svg>
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f1.png" alt="feature1">
         </div>
       </div>
       <div class="feature-right">
         <div class="item-icon">
-          <svg width="96" height="96" fill="#ffffff" viewBox="0 0 252 252" xmlns="http://www.w3.org/2000/svg">
-            <g fill="none" font-family="none" font-size="none" font-weight="none" stroke-dasharray="" stroke-miterlimit="10" text-anchor="none"
-              style="mix-blend-mode:normal">
-              <path d="m0 252v-252h252v252z" fill="none" />
-              <path d="m126 252c-69.588 0-126-56.412-126-126s56.412-126 126-126 126 56.412 126 126-56.412 126-126 126z" fill="#ffbe70"
-              />
-              <path d="m68.095 173.88c1.3255-30.794 26.793-55.44 57.905-55.44s56.584 24.646 57.905 55.44z" fill="#bae0bd" />
-              <g fill="#5e9c76">
-                <path d="m126 120.96c28.874 0 52.658 22.181 55.213 50.4h-110.43c2.5553-28.219 26.339-50.4 55.213-50.4m0-5.04c-33.4 0-60.48 27.08-60.48 60.48h120.96c0-33.4-27.08-60.48-60.48-60.48z"
-                />
-              </g>
-              <circle transform="scale(5.04)" cx="25" cy="14" r="7.5" fill="#ffeea3" />
-              <path d="m126 35.28c19.454 0 35.28 15.826 35.28 35.28s-15.826 35.28-35.28 35.28-35.28-15.826-35.28-35.28 15.826-35.28 35.28-35.28m0-5.04c-22.267 0-40.32 18.053-40.32 40.32s18.053 40.32 40.32 40.32 40.32-18.053 40.32-40.32-18.053-40.32-40.32-40.32z"
-                fill="#ba9b48" />
-              <path d="m121.65 219.24c-3.9866-2.2781-25.699-13.613-63.685-14.092v-81.648c38.904 0.58464 61.422 14.566 61.649 14.707l0.61992 0.39312h11.547l0.61992-0.39312c0.2268-0.14112 22.746-14.122 61.649-14.707v81.648c-37.986 0.48384-59.699 11.814-63.685 14.092z"
-                fill="#f78f8f" />
-              <g fill="#c74343">
-                <path d="m191.52 126.08v76.598c-35.401 0.90216-56.488 11.128-61.821 14.046h-7.4038c-5.3273-2.9182-26.415-13.144-61.816-14.046v-76.598c36.51 1.1239 57.567 14.122 57.774 14.253l1.2398 0.79128h13.013l1.2398-0.78624c0.21672-0.14112 21.057-13.139 57.774-14.258m5.04-5.1156c-41.772 0-65.52 15.12-65.52 15.12h-10.08s-23.748-15.12-65.52-15.12v86.688c42.719 0 65.52 14.112 65.52 14.112h10.08s22.801-14.112 65.52-14.112v-86.688z"
-                />
-              </g>
-              <path d="m141.12 136.63c-4.7426 2.0765-7.2979 3.654-7.3735 3.6994l-1.2398 0.78624h-13.013l-1.2398-0.78624c-0.07056-0.04536-2.6359-1.6078-7.3735-3.6742v75.005c5.6952 2.1067 9.5508 4.037 11.421 5.0602h7.4038c1.8698-1.0231 5.7254-2.9534 11.421-5.0602v-75.03z"
-                fill="#f7a3a3" />
-              <path d="m191.52 194.04c-9.7272 0-17.64-7.9128-17.64-17.64s7.9128-17.64 17.64-17.64h10.08c1.391 0 2.52 1.129 2.52 2.52v30.24c0 1.391-1.129 2.52-2.52 2.52z"
-                fill="#ffeea3" />
-              <path d="m201.6 161.28v30.24h-10.08c-8.3362 0-15.12-6.7838-15.12-15.12s6.7838-15.12 15.12-15.12h10.08m0-5.04h-10.08c-11.133 0-20.16 9.0266-20.16 20.16s9.0266 20.16 20.16 20.16h10.08c2.7821 0 5.04-2.2579 5.04-5.04v-30.24c0-2.7821-2.2579-5.04-5.04-5.04z"
-                fill="#ba9b48" />
-              <path d="m50.4 194.04c-1.391 0-2.52-1.129-2.52-2.52v-30.24c0-1.391 1.129-2.52 2.52-2.52h10.08c9.7272 0 17.64 7.9128 17.64 17.64s-7.9128 17.64-17.64 17.64z"
-                fill="#ffeea3" />
-              <path d="m60.48 161.28c8.3362 0 15.12 6.7838 15.12 15.12s-6.7838 15.12-15.12 15.12h-10.08v-30.24h10.08m0-5.04h-10.08c-2.7821 0-5.04 2.2579-5.04 5.04v30.24c0 2.7821 2.2579 5.04 5.04 5.04h10.08c11.133 0 20.16-9.0266 20.16-20.16s-9.0266-20.16-20.16-20.16z"
-                fill="#ba9b48" />
-            </g>
-          </svg>
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f2.png" alt="feature2">
         </div>
         <div class="item-text">
-          <h3>資訊檢索</h3>
-          <p>本館共有六台公用電腦提供讀者使用查詢瀏覽資料，登記或預約使用本館電腦，要攜帶本人借閱證或有效身分證明文件於一樓櫃台進行登記。</p>
+          <h3>兒童閱覽</h3>
+          <p>本館提供12歲以下兒童適合閱讀之繪本、橋梁書及文本等；其中並設有學齡前(0～3歲)閱讀起步走嬰幼兒專區。</p>
         </div>
       </div>
+      <!-- 2 line -->
       <div class="feature-left">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus, excepturi aperiam
-        rem voluptas commodi?
+        <div class="item-text">
+          <h3 class="text-right">哺集乳室</h3>
+          <p>本館提供寶貝媽媽們溫馨的小天地，除了有舒適的哺乳環境外，還有貼心小物給媽咪寶貝們使用，讓您帶小小孩到圖書館無後顧之憂。</p>
+        </div>
+        <div class="item-icon">
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f3.png" alt="feature1">
+        </div>
       </div>
       <div class="feature-right">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus, excepturi aperiam
-        rem voluptas commodi?
+        <div class="item-icon">
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f4.png" alt="feature2">
+        </div>
+        <div class="item-text">
+          <h3>多功能教室</h3>
+          <p>本館多功能教室為外圓內方之教室，內部設備除課桌椅外並配有投影機、投影幕及數位化多功能講桌。</p>
+        </div>
       </div>
+      <!-- 3 line -->
       <div class="feature-left">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus, excepturi aperiam
-        rem voluptas commodi?
+        <div class="item-text">
+          <h3 class="text-right">視聽欣賞</h3>
+          <p>本館設置有12組視聽專屬設備，沙發座椅寬敞舒適，可供單人或多人一起欣賞。</p>
+        </div>
+        <div class="item-icon">
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f5.png" alt="feature1">
+        </div>
       </div>
       <div class="feature-right">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis officia possimus cum vel rerum accusamus, excepturi aperiam
-        rem voluptas commodi?
+        <div class="item-icon">
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f6.png" alt="feature2">
+        </div>
+        <div class="item-text">
+          <h3>電腦教室</h3>
+          <p>本館設置數位機會中心，中心內建置有電腦教室，每年開辦多樣的免費電腦及平板手機等資訊課程、各類電腦軟體應用實作課程及認證課程。</p>
+        </div>
       </div>
     </div>
     <div id="screen2"></div>
