--- a/web/index.html
+++ b/web/index.html
@@ -181,6 +181,42 @@
         </div>
       </div>
     </div>
+    <!-- Block 5 (地圖) -->
+    <div class="block-5">
+      <div class="open">
+        <h1>圖書館位置</h1>
+        <br/>
+        <p>地址： 824高雄市燕巢區中民路592號</p>
+        <p>聯絡電話：07 616 8670</p>
+        <p>開放時間：</p>
+        <p>星期六 09:00–21:00 星期日 09:00–17:00</p>
+        <p>星期一 休息 星期二 09:00–21:00 星期三 09:00–21:00</p>
+        <p>星期四 09:00–21:00 星期五 09:00–21:00</p>
+      </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3678.245376247955!2d120.35989821496366!3d22.793369985069624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e121466dc27cf%3A0x8bc4bef82cbc9869!2z6auY6ZuE5biC56uL5ZyW5pu46aSo54eV5bei5YiG6aSo!5e0!3m2!1szh-TW!2stw!4v1521267229887"
+        width="100%" height="350" frameborder="0" style="border:0" allowfullscreen="" class=""></iframe>
+    </div>
+    <!-- Block 6 (logo) -->
+    <div class="block-6">
+      <div class="container">
+        <div class="sponsor">
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor01.jpg" alt="sponsor1">
+        </div>
+        <div class="sponsor">
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor02.jpg" alt="sponsor2">
+        </div>
+        <div class="sponsor">
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor03.jpg" alt="sponsor3">
+        </div>
+        <div class="sponsor">
+          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor04.jpg" alt="sponsor4">
+        </div>
+      </div>
+    </div>
+    <!-- Block 7 (fb) -->
+    <div class="block-7">
+      <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor04.jpg" alt="sponsor4">
+    </div>
     <div id="screen2"></div>
     <div id="screen3"></div>
   </section>
