--- a/web/index.html
+++ b/web/index.html
@@ -215,7 +215,7 @@
     </div>
     <!-- Block 7 (fb) -->
     <div class="block-7">
-      <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor04.jpg" alt="sponsor4">
+      <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-fb.png" alt="fb">
     </div>
     <div id="screen2"></div>
     <div id="screen3"></div>
