--- a/web/intro.html
+++ b/web/intro.html
@@ -13,53 +13,180 @@
 </head>
 
 <body>
-<!-- 導航列 -->
-<nav class="navbar">
-  <div class="navbar-header">
-    <a href="index.html">
-      <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-title.png" alt="logo" width="100"
-        height="70" />
-    </a>
-  </div>
-  <button id="menuToggle">
-    <div></div>
-    <div></div>
-    <div></div>
-  </button>
-  <div class="navbar-bottom">
-    <ul id="menu">
-      <li>
-        <a href="">首頁</a>
-      </li>
-      <li>
-        <a href="">圖書館介紹</a>
-      </li>
-      <li>
-        <a href="">互動問答</a>
-      </li>
-      <li>
-        <a href="">導覽手冊</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <!-- 導航列 -->
+  <nav class="navbar">
+    <div class="navbar-header">
+      <a href="index.html">
+        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-title.png" alt="logo" width="100"
+          height="70" />
+      </a>
+    </div>
+    <button id="menuToggle">
+      <div></div>
+      <div></div>
+      <div></div>
+    </button>
+    <div class="navbar-bottom">
+      <ul id="menu">
+        <li>
+          <a href="">首頁</a>
+        </li>
+        <li>
+          <a href="">圖書館介紹</a>
+        </li>
+        <li>
+          <a href="">互動問答</a>
+        </li>
+        <li>
+          <a href="">導覽手冊</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <!-- parallex內容 -->
-  <section class="img" style="background-image: url(https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/intro/intro-img01.jpg);">
-    <div class="overlay">
-      <h1>Parallax</h1>
+  <section>
+    <!-- block 01 -->
+    <div class="block-1">
+      <div class="parallex img1">
+        <div class="overlay">
+          <h1>燕巢圖書館</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>燕巢圖書館</h2>
+          <p>燕巢圖書館獲教育部補助閱讀環境改善經費，進行內部空間改善工程，於106年7月15日重新開館，全館配合特色館藏”自然生態”，以綠意為設計主題。舒適的閱讀氛圍和多元的推廣活動吸引更多的讀者進館，目前藏書六萬七千餘冊。加上本分館執行教育部燕巢數位機會中心計畫，開辦多元數位資訊課程，以彌平城鄉數位化程度，是燕巢地區多元的學習中心。</p>
+        </div>
+      </div>
+    </div>
+    <!-- block 02 -->
+    <div class="block-2">
+      <div class="parallex img2">
+        <div class="overlay">
+          <h1>資訊檢索區</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>資訊檢索區</h2>
+          <p>歡迎您來到資訊檢索區，本區共有六台公用電腦提供讀者使用查詢瀏覽資料，登記或預約使用本館電腦，要攜帶本人借閱證或有效身分證明文件於一樓櫃台進行登記。公用電腦每次使用為三十分鐘；於登記使用時間完畢後，無他人預約登記使用，還可以再登記。若現場電腦均有人使用，則採預約方式登記。如果需讀取或儲存資料，請您自備相關儲存裝置。提醒您館內電腦皆不得用於遊戲及瀏覽血腥色情等內容，違者將進行警告或予以停權。</p>
+        </div>
+      </div>
+    </div>
+    <!-- block 03 -->
+    <div class="block-3">
+      <div class="parallex img3">
+        <div class="overlay">
+          <h1>兒童閱覽區</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>兒童閱覽區</h2>
+          <p>歡迎您來到可愛的兒童閱覽區。這裡提供12歲以下兒童適合閱讀之繪本、橋梁書及文本等；其中並設有學齡前(0～3歲)閱讀起步走嬰幼兒專區。請小朋友們除了安靜看書不奔跑以外，看完書，記得將書本送回他的家喔!我們每一本書都有他的位置標示，別讓他們找不到家了喔。還有還有，兒童閱覽區每週六上午10點到11點有fun心聽故事時間和好玩的延伸活動，歡迎大朋友帶小朋友來聽故事，一起度過愉快的周末。最後再告訴你一個好消息，在燕巢圖書館借書可以集點兌換獎勵品喔!趕快請服務台館員幫忙查查看您累積了多少點數了喔!</p>
+        </div>
+      </div>
+    </div>
+    <!-- block 04 -->
+    <div class="block-4">
+      <div class="parallex img4">
+        <div class="overlay">
+          <h1>哺集乳室</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>哺集乳室</h2>
+          <p>這裡提供寶貝媽媽們溫馨的小天地，除了有舒適的哺乳環境外，還有貼心小物給媽咪寶貝們使用，讓您帶小小孩到圖書館無後顧之憂。</p>
+        </div>
+      </div>
+    </div>
+    <!-- block 05 -->
+    <div class="block-5">
+      <div class="parallex img5">
+        <div class="overlay">
+          <h1>開架閱覽區</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>開架閱覽區</h2>
+          <p>本館一般圖書大多置於本區，依中國圖書編目法逐次放置總類、哲學、宗教、自然科學、應用科學、社會科學及史地、語文、藝術類書藉。此外，另設有介紹台灣人文地理的台灣資料專區、各鄉鎮市志的地方文獻專區及參考書區。閱覽區整體空間設計寬敞明亮、視野通透並配置有造型桌椅供讀者閱覽。</p>
+        </div>
+      </div>
+    </div>
+    <!-- block 06 -->
+    <div class="block-6">
+      <div class="parallex img6">
+        <div class="overlay">
+          <h1>陽光靜讀區</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>陽光靜讀區</h2>
+          <p>陽光靜讀區圓弧形的大片落地窗，加上綠色植栽佈置，有別於一般的閱覽座位，除了可倚窗鳥瞰市區的車水馬龍，亦能享受室內滿眼綠意。這裡除了閱讀也可以沉思或放空，在冬日溫暖陽光下閱讀，讓您同時享受到身心靈的溫暖。</p>
+        </div>
+      </div>
+    </div>
+    <!-- block 07 -->
+    <div class="block-7">
+      <div class="parallex img7">
+        <div class="overlay">
+          <h1>多功能教室</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>多功能教室</h2>
+          <p>本館多功能教室為外圓內方之教室，內部設備除課桌椅外並配有投影機、投影幕及數位化多功能講桌。每年均舉辦許多課程活動，舉凡閱讀推廣、藝文研習、多元文化課程、志工增能、親子共讀、社區社團共創合作、在地人文史地教學、劇團互動表演等均屬之。</p>
+        </div>
+      </div>
+    </div>
+    <!-- block 08 -->
+    <div class="block-8">
+      <div class="parallex img8">
+        <div class="overlay">
+          <h1>視聽欣賞區</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>視聽欣賞區</h2>
+          <p>歡迎您來到舒適的視聽欣賞區。本區設置有12組視聽專屬設備，沙發座椅寬敞舒適，可供單人或多人一起欣賞。讀者於三樓視聽資料專區選取欲觀賞之影片空盒後，攜至一樓櫃台憑借書證或身分證換取影片光碟後自行操作欣賞，視聽資料區內公用電腦使用時間為一次2小時，看完將光碟及空盒交給服務人員並取回您的證件即可。視聽資料區內之影片分為公播版及家用版，公播版影片限館內欣賞，家用版則可憑借閱證外借回家欣賞，借期14日。</p>
+        </div>
+      </div>
+    </div>
+    <!-- block 09 -->
+    <div class="block-9">
+      <div class="parallex img9">
+        <div class="overlay">
+          <h1>外文書區</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>外文書區</h2>
+          <p>本區設有外文書約1千餘冊，包含適合教導兒童讀看之人文科普、童話故事、歷史地理相關西文書，及適合成人閱讀之各類經典文學西文書。</p>
+        </div>
+      </div>
+    </div>
+    <!-- block 10 -->
+    <div class="block-10">
+      <div class="parallex img10">
+        <div class="overlay">
+          <h1>數位機會中心電腦教室</h1>
+        </div>
+      </div>
+      <div class="desc">
+        <div>
+          <h2>數位機會中心電腦教室</h2>
+          <p>本館位處偏鄉，是以教育部為平衡城鄉間數位資訊取得之落差，於本館設置數位機會中心。中心內建置有電腦教室，每年開辦多樣的免費電腦及平板手機等資訊課程、各類電腦軟體應用實作課程及認證課程；並在產業經濟、社會關懷、文化典藏方面關懷在地。此外，數位機會中心數位學伴計畫亦透過遠距線上教學，輔導陪伴偏鄉學童課後學習及心靈陪伴。</p>
+        </div>
+      </div>
     </div>
   </section>
-  <section>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati beatae perferendis deserunt dolores molestiae hic
-      dolorum maxime numquam, ad rerum quas optio quis ut, ducimus eaque sint maiores repellat qui, explicabo. Quis incidunt
-      quo adipisci veniam explicabo nihil maiores doloremque id voluptates corporis animi vel tenetur quidem deserunt, nemo
-      amet. Laborum maxime corporis, quo quis asperiores ipsum dolorum voluptatum unde adipisci, ut necessitatibus praesentium
-      aliquam dolores placeat delectus cupiditate dolorem nobis magni commodi vero tenetur, sapiente fuga earum! Porro adipisci
-      labore explicabo quia nostrum neque laborum maxime soluta ad quaerat quos cum fugiat, at odit. Deleniti id illum quis
-      ex.</p>
-  </section>
-  
 
 
 
