modify ref image

--- a/web/index.html
+++ b/web/index.html
@@ -36,10 +36,10 @@
           <a href="intro.html">圖書館介紹</a>
         </li>
         <li>
-          <a href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/index.html">互動問答</a>
+          <a href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/index.html" target=_blank>互動問答</a>
         </li>
         <li>
-          <a href="https://drive.google.com/file/d/1_8Jb1jVDD6Mg1PnFl8pei_T7_POMZ6EZ/view">導覽手冊</a>
+          <a href="https://drive.google.com/file/d/1_8Jb1jVDD6Mg1PnFl8pei_T7_POMZ6EZ/view" target=_blank>導覽手冊</a>
         </li>
       </ul>
     </div>
