--- a/web/index.html
+++ b/web/index.html
@@ -45,6 +45,7 @@
     </div>
   </nav>
 
+  <!-- slider -->
   <section id="screen1">
     <div class="slideshow-container">
       <div class="mySlides fade">
