--- a/web/intro.html
+++ b/web/intro.html
@@ -32,13 +32,13 @@
           <a href="">首頁</a>
         </li>
         <li>
-          <a href="">圖書館介紹</a>
+          <a href="intro.html">圖書館介紹</a>
         </li>
         <li>
-          <a href="">互動問答</a>
+          <a href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/index.html" target=_blank>互動問答</a>
         </li>
         <li>
-          <a href="">導覽手冊</a>
+          <a href="https://drive.google.com/file/d/1_8Jb1jVDD6Mg1PnFl8pei_T7_POMZ6EZ/view" target=_blank>導覽手冊</a>
         </li>
       </ul>
     </div>
