修改圖片位置

--- a/web/intro.html
+++ b/web/intro.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Parallax Effect</title>
+  <title>圖書館介紹</title>
 
 
 
@@ -29,10 +29,13 @@
     <div class="navbar-bottom">
       <ul id="menu">
         <li>
-          <a href="">首頁</a>
+          <a href="index.html">首頁</a>
         </li>
         <li>
           <a href="intro.html">圖書館介紹</a>
+        </li>
+        <li>
+        <a href="https://andy6804tw.github.io/yenchao-library-web-2018/pannallum-360/index.html" target=_blank>360導覽</a>
         </li>
         <li>
           <a href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/index.html" target=_blank>互動問答</a>
