--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>vanilla menu</title>
+  <title>高雄市立圖書館-燕巢分館</title>
 
 
 
@@ -18,7 +18,7 @@
   <nav class="navbar">
     <div class="navbar-header">
       <a href="index.html">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-title.png" alt="logo" width="100"
+        <img src="./images/home/home-title.png" alt="logo" width="100"
           height="70" />
       </a>
     </div>
@@ -30,10 +30,13 @@
     <div class="navbar-bottom">
       <ul id="menu">
         <li>
-          <a href="">首頁</a>
+          <a href="index.html">首頁</a>
         </li>
         <li>
           <a href="intro.html">圖書館介紹</a>
+        </li>
+        <li>
+          <a href="https://andy6804tw.github.io/yenchao-library-web-2018/pannallum-360/index.html" target=_blank>360導覽</a>
         </li>
         <li>
           <a href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/index.html" target=_blank>互動問答</a>
@@ -49,19 +52,19 @@
   <section id="screen1">
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner01.jpg" style="width:100%">
+        <img src="./images/home/home-banner01.jpg" style="width:100%">
       </div>
       <div class="mySlides fade">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner02.jpg" style="width:100%">
+        <img src="./images/home/home-banner02.jpg" style="width:100%">
       </div>
       <div class="mySlides fade">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner03.jpg" style="width:100%">
+        <img src="./images/home/home-banner03.jpg" style="width:100%">
       </div>
       <div class="mySlides fade">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner04.jpg" style="width:100%">
+        <img src="./images/home/home-banner04.jpg" style="width:100%">
       </div>
       <div class="mySlides fade">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-banner05.jpg" style="width:100%">
+        <img src="./images/home/home-banner05.jpg" style="width:100%">
       </div>
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -87,13 +90,13 @@
         </div>
       </div>
       <div class="right">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-app.png" alt="">
+        <img src="./images/home/home-app.png" alt="">
       </div>
     </div>
     <!-- Block 2 (360導覽) -->
     <div class="block-2">
       <div class="left">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-360.gif" alt="">
+        <img src="./images/home/home-360.gif" alt="">
       </div>
       <div class="right">
         <h1>圖書館 360° 導覽</h1>
@@ -115,11 +118,11 @@
           燕巢圖書館獲教育部補助閱讀環境改善經費，進行內部空間改善工程，於106年7月15日重新開館，全館配合特色館藏”自然生態”，以綠意為設計主題。舒適的閱讀氛圍和多元的推廣活動吸引更多的讀者進館，目前藏書六萬七千餘冊。加上本分館執行教育部燕巢數位機會中心計畫，開辦多元數位資訊課程，以彌平城鄉數位化程度，是燕巢地區多元的學習中心。
         </p>
         <div class="button">
-          <a href="https://drive.google.com/file/d/1gATdTxrZP6P_J5bAQ2uBejY25vL0qdcW/view">詳細介紹</a>
+          <a href="https://andy6804tw.github.io/yenchao-library-web-2018/web/intro.html">詳細介紹</a>
         </div>
       </div>
       <div class="right">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-img01.jpg" alt="">
+        <img src="./images/home/home-img01.jpg" alt="">
       </div>
     </div>
     <div class="block-4">
@@ -131,12 +134,12 @@
           <p>本館共有六台公用電腦提供讀者使用查詢瀏覽資料，登記或預約使用本館電腦，要攜帶本人借閱證或有效身分證明文件於一樓櫃台進行登記。</p>
         </div>
         <div class="item-icon">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f1.png" alt="feature1">
+          <img src="./images/home/home-f1.png" alt="feature1">
         </div>
       </div>
       <div class="feature-right">
         <div class="item-icon">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f2.png" alt="feature2">
+          <img src="./images/home/home-f2.png" alt="feature2">
         </div>
         <div class="item-text">
           <h3>兒童閱覽</h3>
@@ -150,12 +153,12 @@
           <p>本館提供寶貝媽媽們溫馨的小天地，除了有舒適的哺乳環境外，還有貼心小物給媽咪寶貝們使用，讓您帶小小孩到圖書館無後顧之憂。</p>
         </div>
         <div class="item-icon">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f3.png" alt="feature1">
+          <img src="./images/home/home-f3.png" alt="feature1">
         </div>
       </div>
       <div class="feature-right">
         <div class="item-icon">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f4.png" alt="feature2">
+          <img src="./images/home/home-f4.png" alt="feature2">
         </div>
         <div class="item-text">
           <h3>多功能教室</h3>
@@ -169,12 +172,12 @@
           <p>本館設置有12組視聽專屬設備，沙發座椅寬敞舒適，可供單人或多人一起欣賞。</p>
         </div>
         <div class="item-icon">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f5.png" alt="feature1">
+          <img src="./images/home/home-f5.png" alt="feature1">
         </div>
       </div>
       <div class="feature-right">
         <div class="item-icon">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-f6.png" alt="feature2">
+          <img src="./images/home/home-f6.png" alt="feature2">
         </div>
         <div class="item-text">
           <h3>電腦教室</h3>
@@ -201,33 +204,26 @@
     <div class="block-6">
       <div class="container">
         <div class="sponsor">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor01.jpg" alt="sponsor1">
+          <img src="./images/home/sponsor01.jpg" alt="sponsor1">
         </div>
         <div class="sponsor">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor02.jpg" alt="sponsor2">
+          <img src="./images/home/sponsor02.jpg" alt="sponsor2">
         </div>
         <div class="sponsor">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor03.jpg" alt="sponsor3">
+          <img src="./images/home/sponsor03.jpg" alt="sponsor3">
         </div>
         <div class="sponsor">
-          <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/sponsor/sponsor04.jpg" alt="sponsor4">
+          <img src="./images/home/sponsor04.jpg" alt="sponsor4">
         </div>
       </div>
     </div>
     <!-- Block 7 (fb) -->
     <div class="block-7">
-      <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-fb.png" alt="fb">
+      <img src="./images/home/home-fb.png" alt="fb">
     </div>
-    <div id="screen2"></div>
-    <div id="screen3"></div>
   </section>
 
-
-
   <script src="js/index.js"></script>
-
-
-
 
 </body>
 
