--- a/web/index.html
+++ b/web/index.html
@@ -48,8 +48,8 @@
     </div>
   </nav>
 
-  <!-- slider -->
-  <section id="screen1">
+  <section>
+    <!-- slider -->
     <div class="slideshow-container">
       <div class="mySlides fade">
         <img src="./images/home/home-banner01.jpg" style="width:100%">
