--- a/web/intro.html
+++ b/web/intro.html
@@ -17,7 +17,7 @@
   <nav class="navbar">
     <div class="navbar-header">
       <a href="index.html">
-        <img src="https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-title.png" alt="logo" width="100"
+        <img src="./images/home/home-title.png" alt="logo" width="100"
           height="70" />
       </a>
     </div>
