--- a/web/index.html
+++ b/web/index.html
@@ -223,7 +223,7 @@
     </div>
   </section>
 
-  <script src="js/index.js"></script>
+  <script src="js/index.js" type="text/javascript" async></script>
 
 </body>
 
