--- a/public/question.html
+++ b/public/question.html
@@ -11,7 +11,7 @@
 
 	<link rel="icon" href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/favicon.ico" type="image/ico"
 	/>
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/question.css">
 
   
 </head>
@@ -67,7 +67,7 @@ Questions are randomized and at the end you'll get a short summery of your resul
   
   
 
-    <script  src="js/index.js"></script>
+    <script  src="js/question.js"></script>
 
 
 
