--- a/public/intro.html
+++ b/public/intro.html
@@ -35,10 +35,10 @@
           <a href="intro.html">圖書館介紹</a>
         </li>
         <li>
-        <a href="https://andy6804tw.github.io/yenchao-library-web-2018/pannallum-360/index.html" target=_blank>360導覽</a>
+          <a href="pannallum.html" target=_blank>360導覽</a>
         </li>
         <li>
-          <a href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/index.html" target=_blank>互動問答</a>
+          <a href="question.html" target=_blank>互動問答</a>
         </li>
         <li>
           <a href="https://drive.google.com/file/d/1_8Jb1jVDD6Mg1PnFl8pei_T7_POMZ6EZ/view" target=_blank>導覽手冊</a>
