--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,15 @@
   </section>
 
   <script src="js/index.js" type="text/javascript" async></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109365144-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'UA-109365144-2');
+  </script>
 </body>
 
 </html>
