--- a/public/intro.html
+++ b/public/intro.html
@@ -17,8 +17,7 @@
   <nav class="navbar">
     <div class="navbar-header">
       <a href="index.html">
-        <img src="./images/home/home-title.png" alt="logo" width="100"
-          height="70" />
+        <img src="./images/home/home-title.png" alt="logo" width="100" height="70" />
       </a>
     </div>
     <button id="menuToggle">
@@ -194,6 +193,15 @@
 
 
   <script src="js/index.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109365144-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-109365144-2');
+  </script>
 
 </body>
 
