--- a/public/pannallum.html
+++ b/public/pannallum.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <title>Pannallum 360</title>
-  
+
   <link rel="stylesheet" href="https://cdn.pannellum.org/2.3/pannellum.css" />
 
-  <link rel="icon" href="https://andy6804tw.github.io/yenchao-library-web-2018/pannallum-360/favicon.ico" type="image/ico" />
+  <link rel="icon" href="https://andy6804tw.github.io/yenchao-library-web-2018/pannallum-360/favicon.ico" type="image/ico"
+  />
 
   <link rel="stylesheet" href="css/pannallum.css">
 
-  
+
 </head>
 
 <body>
@@ -19,15 +20,20 @@
   <div id="panorama"></div>
 
 
-<script type="text/javascript" src="https://cdn.pannellum.org/2.3/pannellum.js"></script>
-
-  
-
-    <script  src="js/pannallum.js"></script>
+  <script type="text/javascript" src="https://cdn.pannellum.org/2.3/pannellum.js"></script>
 
 
 
+  <script src="js/pannallum.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109365144-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'UA-109365144-2');
+  </script>
 </body>
 
 </html>
