--- a/public/question.html
+++ b/public/question.html
@@ -1,76 +1,95 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Quiz Master</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
+	<title>Quiz Master</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans:700,800" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans:700,800" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-	<link rel="icon" href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/favicon.ico" type="image/ico"
-	/>
-      <link rel="stylesheet" href="css/question.css">
+	<link rel="icon" href="https://andy6804tw.github.io/yenchao-library-web-2018/library-quiz/favicon.ico" type="image/ico" />
+	<link rel="stylesheet" href="css/question.css">
 
-  
+
 </head>
 
 <body>
 
-  <!-- Just another exercise in JavaScript. This time it's a quiz about various topics. Enjoy! 
+	<!-- Just another exercise in JavaScript. This time it's a quiz about various topics. Enjoy! 
 
 Questions are randomized and at the end you'll get a short summery of your results. -->
 
-<header id="header">
-	<div class="logo">
-		<svg id="circle" xmlns="http://www.w3.org/2000/svg" version="1.1" height="100" width="100">
-			<circle cx="50" cy="50" r="50" fill="#c80815" />
-			<text x="25" y="70" fill="#ffffff" style="font-size: 60px;">Q</text>
-		</svg>
+	<header id="header">
+		<div class="logo">
+			<svg id="circle" xmlns="http://www.w3.org/2000/svg" version="1.1" height="100" width="100">
+				<circle cx="50" cy="50" r="50" fill="#c80815" />
+				<text x="25" y="70" fill="#ffffff" style="font-size: 60px;">Q</text>
+			</svg>
+		</div>
+		<div class="title">
+			<h1 class="site-title">圖書館
+				<span class="small">問與答</span>
+			</h1>
+		</div>
+		<div class="score">
+			<p id="score-counter">0</p>
+			<p class="points">Points</p>
+		</div>
+	</header>
+
+	<div id="content">
+		<div id="question-box">
+			<p id="the-question"></p>
+		</div>
+		<div id="answer-box">
+			<ul>
+				<li class="answer">A:
+					<span id="a"></span>
+				</li>
+				<li class="answer">B:
+					<span id="b"></span>
+				</li>
+				<li class="answer">C:
+					<span id="c"></span>
+				</li>
+				<!-- <li class="answer">D: <span id="d"></span></li> -->
+			</ul>
+		</div>
 	</div>
-	<div class="title">
-		<h1 class="site-title">圖書館 <span class="small">問與答</span></h1>
+
+	<div class="results-container">
+		<div class="results">
+			<h1 id="result-desc">Congratulations!</h1>
+			<div class="result-text">
+				<p>總共
+					<span id="num-total">0</span> 個問題，您答對了
+					<span id="num-correct">0</span> 題，答錯
+					<span id="num-wrong">0</span> 題!</div>
+			<!-- <button onclick="ok()">我知道了</button> -->
+			<button class="button-two" onclick="ok()">
+				<span>我知道了</span>
+			</button>
+		</div>
 	</div>
-	<div class="score">
-		<p id="score-counter">0</p>
-		<p class="points">Points</p>
-	</div>
-</header>
 
-<div id="content">
-	<div id="question-box"><p id="the-question"></p></div>
-	<div id="answer-box">
-		<ul>
-			<li class="answer">A: <span id="a"></span></li>
-			<li class="answer">B: <span id="b"></span></li>
-			<li class="answer">C: <span id="c"></span></li>
-			<!-- <li class="answer">D: <span id="d"></span></li> -->
-		</ul>
-	</div>
-</div>
-
-<div class="results-container">
-	<div class="results">
-		<h1 id="result-desc">Congratulations!</h1>
-		<div class="result-text"><p>總共 <span id="num-total">0</span> 個問題，您答對了 <span id="num-correct">0</span> 題，答錯 <span id="num-wrong">0</span> 題!</div>
-		<!-- <button onclick="ok()">我知道了</button> -->
-		<button class="button-two" onclick="ok()">
-			<span>我知道了</span>
-		</button>
-	</div>
-</div>
-
-<footer id="footer">
-	<p>高雄市立圖書館 燕巢分館</p>
-</footer>
-  
-  
-
-    <script  src="js/question.js"></script>
+	<footer id="footer">
+		<p>高雄市立圖書館 燕巢分館</p>
+	</footer>
 
 
 
+	<script src="js/question.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109365144-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-109365144-2');
+	</script>
 
 </body>
 
