--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
     <!-- Block 2 (360導覽) -->
     <div class="block-2">
       <div class="left">
-        <img src="./images/home/home-360.gif" alt="">
+        <img src="./images/home/home-360.jpg" alt="">
       </div>
       <div class="right">
         <h1>圖書館 360° 導覽</h1>
